# Django-drf

./: README.MD  pyproject.toml
mysite/: settings.py  urls.py
students/: serializers.py  urls.py
